--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div id="custom_product_content">
-	<h1>Custom Leather Goods</h1>
+	<h1>Custom <%= @category %></h1>
 	<%= render 'form' %>
 </div>
 
