--- a/app/views/page/custom.html.erb
+++ b/app/views/page/custom.html.erb
@@ -1,2 +1,7 @@
 <h1>Page#custom</h1>
 <p>Find me in app/views/page/custom.html.erb</p>
+
+<a href="/builder?category=Billfold">Billfold</a><br>
+<a href="/builder?category=Card+Wallet">Card Wallet</a><br>
+<a href="/builder?category=ID+Wallet">ID Wallet</a><br>
+<a href="/builder?category=Notebook">Notebook</a>
