address builder params security

--- a/app/views/page/custom.html.erb
+++ b/app/views/page/custom.html.erb
@@ -1,5 +1,4 @@
-<h1>Page#custom</h1>
-<p>Find me in app/views/page/custom.html.erb</p>
+<h1>Custom Leather Goods</h1>
 
 <a href="/builder?category=Billfold">Billfold</a><br>
 <a href="/builder?category=Card+Wallet">Card Wallet</a><br>
