--- a/app/views/page/catalog.html.erb
+++ b/app/views/page/catalog.html.erb
@@ -12,16 +12,15 @@
 <div id="product_list">
   <% @products.each do |product| %>
     <% if product.stock > 0 %>
-      <div class="<%= product.category %>">
-        <%= link_to product do %>
+      <%= link_to product do %>
+        <div class="product_tile">
           <%= image_tag(product.image_url, :alt => product.name) %>
-        <% end %>
-        <div class="product_info">
-          <%= product.name %>
-          <%= product.price %>
-          <a href="/cart/<%= product.id %>?type=product">Add to Cart</a>
+          <div class="product_info">
+            <text class="product_title"><%= product.name %></text><br>
+            <text class="price"><%= number_to_currency(product.price, :unit => '$') %></text>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   <% end %>
 </div>
