add product image uploads via paperclip

--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -1,3 +1,7 @@
+<div id="breadcrumb">
+  <%= link_to '← Back to Custom', custom_path %>
+</div>
+
 <div id="js_notice">
 	JavaScript is required to view this page.
 </div>
