--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, html: { multipart: true }) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -24,9 +24,21 @@
     <%= f.text_area :long_description %>
   </div>
   <div class="field">
+    <%= f.label :main_image %><br>
+    <%= f.file_field :main_image %>
+  </div>
+  <div class="field">
+    <%= f.label :interior_image %><br>
+    <%= f.file_field :interior_image %>
+  </div>
+  <div class="field">
+    <%= f.label :context_image %><br>
+    <%= f.file_field :context_image %>
+  </div>
+<!--   <div class="field">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :price %><br>
     <%= f.text_field :price %>
@@ -41,7 +53,7 @@
   </div>
   <div class="field">
     <%= f.label :stock %><br>
-    <%= f.number_field :stock, min: 0 %>
+    <%= f.number_field :stock, value: 1, min: 0 %>
   </div>
   <div class="field">
     <%= f.label :tags %><br>
