add image slider to product show

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -8,6 +8,6 @@
 
 	<p>Handmade in Chicago, Illinois, USA</p>
 	<%= link_to "Email", "mailto:info@decadeleather.com" %>
-	<%= link_to "Policies", policies_path %>
+	<%= link_to "Fine Print", policies_path %>
 </div>
 
