--- a/app/views/page/policies.html.erb
+++ b/app/views/page/policies.html.erb
@@ -1,4 +1,4 @@
-<h1>Policies</h1>
+<h1>Fine Print</h1>
 <h2>Refunds & Exchanges</h2>
 <p>Decade stands behind its craftsmanship and will issue refunds and/or replacements on unused leather goods due to defective manufacturing or craftsmanship.</p>
 <p>All sales are final. Due to the nature of custom leatherwork, refunds will not be issued for used items or for reasons other than defective manufacturing.</p>
