update social buttons and add classes to image_tags sitewide

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,15 @@
 <footer class="footer">
-	<%= link_to "Instagram", "https://www.instagram.com/decadeleather/" %>
-	<%= link_to "Facebook", "https://www.facebook.com/decadeleather" %>
-	<%= link_to "Twitter", "https://twitter.com/DecadeLeather" %>
-	<%= link_to "Tumblr", "http://decadeleather.tumblr.com/" %>
+	<div class="social_nav">
+		<a href="https://www.instagram.com/decadeleather">
+			<%= image_tag("/instagram/button/path", :class => "social_button", :alt => "Instagram") %>
+		</a>
+		<a href="https://www.facebook.com/decadeleather">
+			<%= image_tag("/facebook/button/path", :class => "social_button", :alt => "Facebook") %>
+		</a>
+		<a href="https://twitter.com/DecadeLeather">
+			<%= image_tag("/twitter/button/path", :class => "social_button", :alt => "Twitter") %>
+		</a>
+		<a href="http://decadeleather.tumblr.com">
+			<%= image_tag("/tumblr/button/path" ,:class => "social_button", :alt => "Tumblr") %>
+	</div>
 </footer>
