--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,10 @@
 <footer class="footer">
 	<div class="social_nav">
-		<a href="https://www.instagram.com/decadeleather">
-			<%= image_tag("/instagram/button/path", :class => "social_button", :alt => "Instagram") %>
-		</a>
-		<a href="https://www.facebook.com/decadeleather">
-			<%= image_tag("/facebook/button/path", :class => "social_button", :alt => "Facebook") %>
-		</a>
-		<a href="https://twitter.com/DecadeLeather">
-			<%= image_tag("/twitter/button/path", :class => "social_button", :alt => "Twitter") %>
-		</a>
-		<a href="http://decadeleather.tumblr.com">
-			<%= image_tag("/tumblr/button/path" ,:class => "social_button", :alt => "Tumblr") %>
+		<ul class="soc">
+	    <li><a class="soc-instagram" href="https://www.instagram.com/decadeleather"></a></li>
+	    <li><a class="soc-facebook" href="https://www.facebook.com/decadeleather"></a></li>
+	    <li><a class="soc-twitter" href="https://twitter.com/DecadeLeather"></a></li>
+	    <li><a class="soc-tumblr soc-icon-last" href="http://decadeleather.tumblr.com/"></a></li>
+		</ul>
 	</div>
 </footer>
