--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,13 @@
 
 }
 
+body {
+
+	background: #F6F6F6;
+
+}	
+
+
 #wrapper {
 
 	max-width: 940px;
@@ -33,8 +40,7 @@
 
 	width: 100%;
 	height: 2em;
-	background: #fff;
-
+	background: #F6F6F6;
 }
 
 #session a{
@@ -53,7 +59,7 @@
 
 	width: 100%;
 	height: 7em;
-	background: #fff;
+	background: #F6F6F6;
 
 }
 
@@ -191,5 +197,12 @@
 .radio_swatch {
 
 	display: none;
+
+}
+
+.social_button {
+
+	height: 25px;
+	width: 25px;
 
 }
