--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,13 +60,20 @@ body {
 	width: 100%;
 	height: 7em;
 	background: #F6F6F6;
+	text-align: center;
+
+}
+
+#pages_nav {
+
+	margin-top: 1em;
 
 }
 
 #pages_nav a{
 
 	width: 100%;
-	padding: 0 1em 0 1em;
+	padding: 0 4em 0 4em;
 	color: #292d33;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -205,4 +212,13 @@ body {
 	height: 25px;
 	width: 25px;
 
+}
+
+#logo {
+
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 124px;
+  display: block;
+	
 }
