add shipping columns to orders table

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,8 @@
 <h2>Orders</h2>
-<%= session.id %>
 <% if @orders.length >= 1 %>
+	<% @orders.each do |order| %>
 
+	<% end %>
 <% else %>
 	<p>You have no orders.</p>
 <% end %>
