--- a/app/views/layouts/custom_products.html.erb
+++ b/app/views/layouts/custom_products.html.erb
@@ -13,7 +13,9 @@
 	
 		<%= render "layouts/header.html.erb" %>
 
-		<%= yield %>
+		<div id="content">
+			<%= yield %>
+		</div>
 
 		<%= render "layouts/footer.html.erb" %>
 	
