--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -16,7 +16,9 @@
 	
 		<%= render "layouts/header.html.erb" %>
 
-		<%= yield %>
+    <div id="content">
+      <%= yield %>
+    </div>
 
 		<%= render "layouts/footer.html.erb" %>
 	
