--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -49,7 +49,7 @@
   </div>
   <div class="field">
     <%= f.label :stock %><br>
-    <%= f.number_field :stock, value: 1, min: 0 %>
+    <%= f.number_field :stock, min: 0 %>
   </div>
   <div class="field">
     <%= f.label :tags %><br>
