--- a/app/assets/stylesheets/social_buttons.css
+++ b/app/assets/stylesheets/social_buttons.css
@@ -68,7 +68,7 @@
     border-radius: 0px;
     margin-right: 7px;
     color: #444;
-    background-color: #F6F6F6;
+    background-color: #FFF;
 }
 
 .soc a:hover {
