--- a/app/views/layouts/custom_products.html.erb
+++ b/app/views/layouts/custom_products.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Decade</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <%= stylesheet_link_tag    '//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css' %>
+	<%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'public' %>
   <%= csrf_meta_tags %>
 </head>
