--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="footer">
 	<div class="social_nav">
-		<ul class="soc">
-	    <li><a class="soc-instagram" href="https://www.instagram.com/decadeleather"></a></li>
-	    <li><a class="soc-facebook" href="https://www.facebook.com/decadeleather"></a></li>
-	    <li><a class="soc-twitter" href="https://twitter.com/DecadeLeather"></a></li>
-	    <li><a class="soc-tumblr soc-icon-last" href="http://decadeleather.tumblr.com/"></a></li>
+		<ul>
+			<li><a class="fa fa-instagram" href="https://www.instagram.com/decadeleather"></a></li>
+			<li><a class="fa fa-facebook" href="https://www.facebook.com/decadeleather"></a></li>
+			<li><a class="fa fa-twitter" href="https://twitter.com/DecadeLeather"></a></li>
+			<li><a class="fa fa-tumblr" href="http://decadeleather.tumblr.com/"></a></li>
 		</ul>
 	</div>
 </footer>
