--- a/app/views/layouts/product.html.erb
+++ b/app/views/layouts/product.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'owl.carousel.min' %>
   <%= stylesheet_link_tag    'owl.theme.default.min' %>
+  <%= stylesheet_link_tag    '//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'product' %>
   <%= javascript_include_tag 'owl.carousel.min' %>
