--- a/app/views/page/custom.html.erb
+++ b/app/views/page/custom.html.erb
@@ -1,4 +1,6 @@
-<h1>Custom Leather Goods</h1>
+<div class="page_title">
+  <h1>Custom Leather Goods</h1>
+</div>
 
 <% custom_products = {"Billfold" => "200", "Card Wallet" => "150", "ID Wallet" => "80", "Notebook" => "120"} %>
 
