--- a/app/views/page/catalog.html.erb
+++ b/app/views/page/catalog.html.erb
@@ -1,25 +1,30 @@
-<div id="style_nav">
-  <h1>Catalog</h1>
-  <ul>
-    <li><%= link_to "All", catalog_path %></li>
-    <li><%= link_to "Billfolds", catalog_path(:category => "Billfold") %></li>
-    <li><%= link_to "Card Wallets", catalog_path(:category => "Card Wallet") %></li>
-    <li><%= link_to "ID Wallets", catalog_path(:category => "ID Wallet") %></li>
-    <li><%= link_to "Notebooks", catalog_path(:category => "Notebook") %></li>
-  </ul>
+<div class="page_title">
+  <div class="dropdown">
+  <h1>Catalog <i class="fa fa-chevron-down" aria-hidden="true"></i></h1>
+    <div class = "dropdown_content">
+      <ul>
+        <li><%= link_to "All", catalog_path %></li>
+        <li><%= link_to "Billfolds", catalog_path(:category => "Billfold") %></li>
+        <li><%= link_to "Card Wallets", catalog_path(:category => "Card Wallet") %></li>
+        <li><%= link_to "ID Wallets", catalog_path(:category => "ID Wallet") %></li>
+        <li><%= link_to "Notebooks", catalog_path(:category => "Notebook") %></li>
+      </ul>
+    </div>
+  </div>
 </div>
+
 <div id="product_list">
   <% @products.each do |product| %>
     <% if product.stock > 0 %>
-      <%= link_to product do %>
-        <div class="product_tile">
+      <div class="product_tile">
+        <%= link_to product do %>
           <%= image_tag(product.main_image(:medium), :class => "catalog_image" , :alt => product.name)%>
           <div class="product_info">
             <text class="product_title"><%= product.name %></text><br>
             <text id="price"><%= number_to_currency(product.price, :unit => '$') %></text>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>  
     <% end %>
   <% end %>
 </div>
