--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -7,7 +7,9 @@
 </div>
 
 <div id="custom_product_content">
-	<h1>Custom <%= @category %></h1>
+	<div class="page_title">
+		<h1>Custom <%= @category %></h1>
+	</div>
 	<%= render 'form' %>
 </div>
 
