--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@ body {
 
 #content a:hover {
 
-	color: #333;
+	color: #8f6806;
 
 }
 
@@ -104,7 +104,7 @@ h1 {
 
 #session a:hover {
 
-	color: #333;
+	color: #8f6806;
 
 }
 
@@ -119,7 +119,7 @@ h1 {
 
 #pages_nav {
 
-	margin-top: 1em;
+	margin-top: 1.75em;
 
 }
 
@@ -137,13 +137,13 @@ h1 {
 
 #pages_nav a:hover {
 
-	color: #333;
+	color: #8f6806;
 
 }
 
 #pages_nav a:active {
 
-	color: #333;
+	color: #8f6806;
 
 }
 
@@ -253,9 +253,9 @@ h1 {
 
 }
 
-#product_info {
+.product_info {
 
-	margin: .8em 0 0 0;
+	text-align: center;
 
 }
 
@@ -302,7 +302,7 @@ h1 {
 
 	text-decoration: none;
 	font-size: 1.7em;
-	color: #333;
+	color: #777;
 
 }
 
@@ -332,7 +332,7 @@ h1 {
 
 .catalog_image {
 
-	max-width: 325px;
+	max-width: 300px;
 	width: 100%;
 
 }
@@ -366,11 +366,6 @@ h1 {
     display: block;
 }
 
-.dropdown_content a:hover {
-
-	background-color: #f9f9f9;
-
-}
 
 .dropdown .fa-chevron-down {
 
